--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://VigneshBalasubramaniyan.github.io/kk-events",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +12,8 @@
     "bootstrap": "^5.3.3",
     "env-cmd": "^10.1.0",
     "framer-motion": "^11.1.7",
+    "gh-pages": "^6.1.1",
+    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-bootstrap": "^2.10.2",
@@ -25,6 +28,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
